[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Jordan Brown <jordan.brown@tag-games.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive-async-view = "^0"
cursive_buffered_backend = "0.4.1"
regex = "1"
itertools = "*"
circular-queue = "*"

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["crossterm-backend", "toml"]
